# quadrature

./: .project  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
doc/black-pill/: README.md  black-pill-centroid-overlay.tif  blackpill-cn-positions.csv  blackpill.tif  cn_positions.py
microcontroller/: Cargo.toml
microcontroller/src/: int_pid.rs  main.rs  motor.rs  rpc.rs
microcontroller/src/hardware/: mod.rs  motor.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: main.rs  protocol.rs
