[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
readme = "README.md"
name = "quadrature"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
stm32f1xx-hal = { version = "0.4.0", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.1"
# cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.0"
serial-line-ip = "0.4.0"
nb = "0.1.2"
# stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }
usb-device = "0.2.3"
usbd-serial = "0.1"
stm32f1 = "0.8.0"
heapless = "0.5.1"
postcard = "0.4.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "quadrature"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
