[package]
name = "client"
version = "0.1.0"
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "0.4.2", features = [ "use-std" ] }
serde = { version = "1.0.102" }
protocol = { path = "../protocol", version="0.1.0", features = [ "use-std" ] }
serialport = "3.3.0"
clap = ""

[[bin]]
name = "client"
