[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
readme = "README.md"
name = "microcontroller"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
stm32f1xx-hal = { version = "0.4.0", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.1"
# cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.0"
serial-line-ip = "0.4.0"
nb = "0.1.2"
# stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }
usb-device = "0.2.3"
usbd-serial = "0.1"
stm32f1 = "0.8.0"
heapless = "0.5.1"
postcard = "0.4.2"
serde = { version = "1.0.102", default-features = false }
arraydeque = { version = "0.4", default-features = false }
protocol = { path = "../protocol", version="0.1.0" } 

# this lets you use `cargo fix`!
[[bin]]
name = "microcontroller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
