[package]
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"
name = "microcontroller"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium" ] }
cortex-m = "0.7.0"
# cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.3"
# serial-line-ip = "0.4.0"
nb = "1.0.0"
# stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }
# usb-device = "0.2.3"
# usbd-serial = "0.1"
stm32f1 = { version = "0.13.0", features = ["rt", "stm32f103" ] }
heapless = "0.7.1"
postcard = "0.7.0"
arraydeque = { version = "0.4", default-features = false }
protocol = { path = "../protocol", version="0.1.0" } 
serde = { version = "1.0.116", default-features = false }
cobs = { version = "0.1.4", default-features = false }

# this lets you use `cargo fix`!
[[bin]]
name = "microcontroller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
