[package]
name = "protocol"
version = "0.1.0"
authors = ["David Ireland <davidji@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", default-features = false }

[features]
defaults = []
use-std = []
